# WidgetLib

./: .gitignore  CMakeLists.txt  README.md  github_link  log.txt
include/: Box.hpp  Button.hpp  ButtonEvent.hpp  Checkbox.hpp  CheckboxEvent.hpp  CheckboxObserver.hpp  CheckboxObserverAdapter.hpp  Container.hpp  DefaultSpinnerModel.hpp  DrawingCanvas.hpp  Event.hpp  EventEmitter.hpp  FocusEvent.hpp  FocusObserver.hpp  FocusObserverAdapter.hpp  FreePanel.hpp  KeyObserverAdapter.hpp  Label.hpp  LayoutManager.hpp  MouseEvent.hpp  MouseObserver.hpp  MouseObserverAdapter.hpp  NumberSpinner.hpp  NumberSpinnerModel.hpp  Observer.hpp  RadioButton.hpp  ResizeObserver.hpp  ResizeObserverAdapter.hpp  Selectable.hpp  SelectablePanel.hpp  Selection.hpp  SelectionEvent.hpp  SelectionEventSource.hpp  SelectionGroup.hpp  SelectionObserverAdapter.hpp  Selector.hpp  SelectorEvent.hpp  SelectorObserver.hpp  Spinner.hpp  SpinnerModel.hpp  (+5 more)
include/WidgetLib/: Box.hpp  Button.hpp  Checkbox.hpp  Container.hpp  DefaultSpinnerModel.hpp  DrawingCanvas.hpp  EventEmitter.hpp  FreePanel.hpp  Label.hpp  NumberSpinner.hpp  NumberSpinnerModel.hpp  RadioButton.hpp  Selectable.hpp  SelectablePanel.hpp  Selection.hpp  Selector.hpp  Spinner.hpp  TextBox.hpp  TextDisplay.hpp  Toplevel.hpp  Util.hpp  Vec2.hpp  Widget.hpp
include/WidgetLib/evt/: ButtonEvent.hpp  Event.hpp  FocusEvent.hpp  KeyEvent.hpp  MouseEvent.hpp  Observer.hpp  ObserverAdapter.hpp  ResizeEvent.hpp  SelectionEvent.hpp  SelectionGroupEvent.hpp
include/evt/: ButtonObserver.hpp  ButtonObserverAdapter.hpp  FocusObserverAdapter.hpp  KeyEvent.hpp  KeyObserver.hpp  MouseEvent.hpp  Observer.hpp  ObserverAdapter.hpp  ResizeEvent.hpp  SelectionGroupEvent.hpp  SelectionObserver.hpp
lib/: CMakeLists.txt
src/: Button.cpp  CMakeLists.txt  Checkbox.cpp  Container.cpp  DrawingCanvas.cpp  FreePanel.cpp  Label.cpp  RadioButton.cpp  Selectable.cpp  SelectablePanel.cpp  Selection.cpp  SelectionEventSource.cpp  SelectionGroup.cpp  Selector.cpp  Spinner.cpp  TextBox.cpp  TextDisplay.cpp  Toplevel.cpp  Widget.cpp  log.txt  main.cpp
